<resources>

    <string name="app_name">Cake Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Toko Roti</string>
    <string name="nav_header_subtitle">Indonesia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_admin">Master data</string>
    <string name="menu_order">Order</string>
    <string name="menu_report">Laporan</string>
    <string name="menu_capacity">Kapasitas sub kategori</string>
    <string name="menu_user">User</string>
    <string name="menu_logout">Keluar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="input_order">Input order</string>
    <string name="input_category">Input kategori</string>
    <string name="input_user">Tambah user</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="scan_qr">Scan QR</string>
    <string name="detail_category">Detail kategori</string>
    <string name="error_msg">Terjadi kesalahan</string>
    <string name="session_end">Sesi telah habis, silakan login kembali.</string>
    <string name="menu_edit_order">Ubah</string>
    <string name="menu_action_submit">Simpan</string>
    <string name="menu_action_info">Info</string>

    <!-- dialog message -->
    <string name="dialog_title_warning">Peringatan</string>
    <string name="dialog_title_info">Info</string>
    <string name="dialog_backpressed_yes">Ya</string>
    <string name="dialog_backpressed_no">Tidak</string>
    <string name="dialog_backpressed_ok">Ok</string>

    <string name="dialog_backpressed_order_message">Order belum dibuat. Anda yakin ingin membatalkan order ini dan kembali ke menu utama?</string>
    <string name="dialog_backpressed_category_message">Kategori belum disimpan. Anda yakin ingin kembali ke menu utama?</string>
    <string name="dialog_delete_category_message">Anda yakin ingin menghapus kategori ini?</string>
    <string name="dialog_delete_subcategory_message">Anda yakin ingin menghapus sub kategori ini?</string>
    <string name="dialog_delete_product_message">Anda yakin ingin menghapus produk ini?</string>
    <string name="dialog_delete_orderitem_detail">Anda yakin ingin menghapus detail order item ini?</string>
    <string name="dialog_edit_order_info_message">Data yang dapat diubah adalah ucapan.\nJika ingin mengubah data lain, silakan batalkan/buat order baru.</string>

    <array name="list_ucapan">
        <item>Selamat ulang tahun</item>
        <item>Selamat tahun baru</item>
        <item>Happy birthday</item>
        <item>Happy graduation</item>
        <item>Happy anniversary</item>
        <item>Congratulations</item>
    </array>
</resources>