<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_n_purchases"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_n_list"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_capacity"
            android:icon="@drawable/ic_n_scale"
            android:title="@string/menu_capacity" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_n_bar_chart"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_n_user_2"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_n_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>