<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_order">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atiga.cakeorder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.atiga.cakeorder.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.atiga.cakeorder.ui.masterdata.MasterDataFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/masterdata_fragment" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.atiga.cakeorder.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/report_fragment" />
    <fragment
        android:id="@+id/nav_capacity"
        android:name="com.atiga.cakeorder.ui.capacity.CapacityFragment"
        android:label="@string/menu_capacity"
        tools:layout="@layout/capacity_fragment" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.atiga.cakeorder.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/user_fragment" />
</navigation>